# TraktCPP

./: .gitignore  docker-compose.yml  readme.md
Backend/: .gitignore  CMakeLists.txt  Dockerfile  requirements.txt
Backend/app/: main.py
Backend/app/routes/: auth.py  media.py  sync.py  user.py
Backend/app/services/: tmdb_api.py  token_store.py  trakt_api.py  trakt_auth.py
Backend/app/utils/: config.py
Backend/config/: example-config.json  secrets.env
Backend/data/: token.json
Backend/src/: config.cpp  config.h  data_store.cpp  data_store.h  main.cpp  routes.cpp  routes.h  tmdb_api.cpp  tmdb_api.h  trakt_api.cpp  trakt_api.h  trakt_oauth.cpp  trakt_oauth.h
Cal/: CMakeLists.txt
Cal/src/: config.cpp  config.h  routes.cpp  routes.h  tmdb_api.cpp  trakt_api.cpp
config/: example-config.json  example.env
frontend/: Dockerfile
frontend/src/: App.jsx
frontend/src/api/: fetchData.js
frontend/src/components/: Row.css  Row.jsx
